execute .jar file with fx